--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "Firmware/components/libriccore"]
 	path = Firmware/components/libriccore
-	url = https://github.com/icl-rocketry/libriccore.git
+	url = git@github.com:icl-rocketry/libriccore.git
 [submodule "Firmware/components/librnp"]
 	path = Firmware/components/librnp
-	url = https://github.com/icl-rocketry/librnp.git
+	url = git@github.com:icl-rocketry/librnp.git
 [submodule "Firmware/components/librrc"]
 	path = Firmware/components/librrc
-	url = https://github.com/icl-rocketry/librrc.git
+	url = git@github.com:icl-rocketry/librrc.git
 [submodule "Firmware/components/ArduinoJson"]
 	path = Firmware/components/ArduinoJson
 	url = https://github.com/bblanchon/ArduinoJson.git
@@ -18,4 +18,4 @@
 	url = https://github.com/icl-rocketry/librrc.git
 [submodule "Firmware/components/arduino"]
 	path = Firmware/components/arduino
-	url = https://github.com/espressif/arduino-esp32.git
+	url = git@github.com:espressif/arduino-esp32.git
